# InventorySystem

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml
inventory_service/: Dockerfile  entrypoint.sh  pyproject.toml
inventory_service/config/: settings.py
inventory_service/products/: admin.py  apps.py  models.py
inventory_service/products/management/commands/: consume_orders.py
inventory_service/products/migrations/: 0001_initial.py  0002_alter_reservation_status.py
order_service/: Dockerfile  auth.py  main.py  pyproject.toml
order_service/src/order_app/: auth.py  database.py  main.py  models.py  schemas.py  services.py  subscribers.py
