[project]
name = "order-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "uvicorn>=0.44.0",
    "pydantic[email]",
    "email-validator",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "faststream[kafka]",
]
